--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
-    "start": "webpack serve"
+    "start": "webpack serve --env mode=development"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -18,6 +18,7 @@
     "@types/node": "^20.8.3",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
+    "@types/react-select": "^5.0.1",
     "@types/webpack": "^5.28.3",
     "@types/webpack-bundle-analyzer": "^4.6.1",
     "@types/webpack-dev-server": "^4.7.2",
@@ -41,8 +42,11 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.16.0",
+    "react-select": "^5.8.0"
   }
 }
